# esp32c3-usbVCSensor

./: .gitignore  LICENSE  README.md
Software/: .gitignore  CMakeLists.txt
Software/components/lvgl_application/: lvgl_application_create.c  lvgl_application_create.h  lvgl_digitclock_create.c  lvgl_digitclock_create.h  lvgl_mainThread.c  lvgl_mainThread.h  lvgl_netInfo_create.c  lvgl_netInfo_create.h  lvgl_usbSensor_create.c  lvgl_usbSensor_create.h
Software/components/lvgl_application/src/: dianaIMG.c  lv_font_awesom.c  tale1_logo.c
Software/components/lvgl_esp32_drivers/: lvgl_helpers.h
Software/components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
Software/main/: CMakeLists.txt  KConfig.projbuild  main.c  mqtt_app.c  mqtt_app.h  peripheralSensor.c  peripheralSensor.h  sntp_client.c  sntp_client.h  uiButton.c  uiButton.h  wifi_smartconfig.c  wifi_smartconfig.h
Software/src/: lv_font_msYaHei.c
pcSimulate/lv_sim_visual_studio/: LVGL.Simulator.sln
pcSimulate/lv_sim_visual_studio/LVGL.Simulator/: LVGL.Simulator.c  LVGL.Simulator.vcxproj  LVGL.Simulator.vcxproj.filters  lv_conf.h  lvgl_networkInfo_create.cpp  lvgl_networkInfo_create.h
pcSimulate/lv_sim_visual_studio/LVGL.Simulator/application/: CMakeLists.txt  base64.h  lvgl_application_create.c  lvgl_digitclock_create.c  lvgl_digitclock_create.h  lvgl_netInfo_create.c  lvgl_netInfo_create.h  lvgl_usbSensor_create.c  lvgl_usbSensor_create.h
pcSimulate/lv_sim_visual_studio/LVGL.Simulator/application/src/: bellaIMG.c
pcSimulate/lv_sim_visual_studio/LVGL.Simulator/lvgl/demos/widgets/assets/: img_lvgl_logo.c
