idf_component_register( 
                    SRCS    "main.c"
                            "wifi_smartconfig.c"
                            "mqtt_app.c"
                            "peripheralSensor.c"
                            "uiButton.c"
                            "sntp_client.c"
                    INCLUDE_DIRS "."
                    )